syntax = "proto3";

package linuxcnc;

option java_package = "ro.dragossusi.proto.linuxcnc.hal";
option java_multiple_files = true;

message HalComponent {
  int32 component_id = 1;
  string name = 2;
}