syntax = "proto3";

package linuxcnc;

option java_package = "ro.dragossusi.proto.linuxcnc.hal";
option java_multiple_files = true;

enum HalPinType {
  TYPE_UNSPECIFIED = 0;
  TYPE_UNINITIALIZED = 1;
  TYPE_BIT = 2;
  FLOAT = 3;
  S32 = 4;
  U32 = 5;
  PORT = 6;
}

enum HalPinDir {
  DIR_UNSPECIFIED = 0;
  IN = 1;
  OUT = 2;
  IO = 3;
}

message HalPin {
  string name = 1;
  HalPinType type = 2;
  HalPinDir dir = 3;
  int32 component_id = 4;
  string component_name = 5;
}
